--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26",
     "@angular/http": "^7.2.5",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "primeng": "^7.1.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
