--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "zone.js": "~0.8.26",
     "@angular/http": "^7.2.5",
     "moment": "^2.24.0",
-    "primeng": "^7.1.2",
+    "ngx-bootstrap": "^4.1.1",
     "tar": "^4.4.8"
   },
   "devDependencies": {
