--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "ngx-bootstrap": "^4.1.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "chart.js": "^2.8.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
