--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26",
-    "chart.js": "^2.8.0"
+    "chart.js": "^2.8.0",
+    "d3": "4.13.0",
+    "d3-scale": "^3.0.0",
+    "d3-axis": "^1.0.12",
+    "@types/d3": "^4.4.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
