--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "d3-scale": "^3.0.0",
     "d3-axis": "^1.0.12",
     "@types/d3": "^4.4.0",
-    "d3-tip": "0.9.1"
+    "d3-tip": "0.9.1",
+    "d3-scale-chromatic": "^1.3.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.12.4",
